# delivery-kit-sdk

./: .gitignore  .gitmodules  .golangci.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  Taskfile.dist.yaml  go.mod  go.sum
.github/workflows/: lint.yml  release_release-please.yml  test_e2e.yaml  test_e2e_longterm.yaml  test_longterm.yaml  test_unit.yaml
c/lib/welf/: CMakeLists.txt
c/lib/welf/include/: note.h  welf.h  welf_elf.h  welf_error.h  welf_note.h  werror.h
c/lib/welf/src/: note.c  welf.c  welf_elf.c  welf_error.c  welf_note.c  werror.c
c/lib/welf/tests/: tests.c
pkg/dmverity/: dmverity.go
pkg/integrity/: dmverity.go
pkg/signature/: bundle.go  bundle_test.go  suite_test.go
pkg/signature/elf/: errors.go  file.go  file_linux.go  file_other.go  file_test.go  suite_test.go
pkg/signature/elf/custom/: file_linux.go  file_other.go  file_test.go  suite_test.go
pkg/signature/elf/inhouse/: file_linux.go  file_other.go  file_test.go  suite_test.go
pkg/signature/image/: annotation.go  manifest.go  manifest_test.go  manifest_vault_helpers_test.go  manifest_vault_local_longterm_test.go  manifest_vault_local_test.go  manifest_vault_remote_longterm_test.go  manifest_vault_remote_test.go  manifest_vault_test.go  suite_test.go
pkg/signature/image/testdata/: jwt-policy.hcl
pkg/signver/: cert_chain.go  cert_chain_verification.go  certificate.go  certificate_test.go  key_loader.go  key_options.go  signerverifier.go  signerverifier_test.go  signver.go  signver_test.go  verifier.go  verifier_test.go
pkg/signver/blob/: blob.go  blob_test.go  load_test.go  suite_test.go
pkg/signver/hashivault/: README.md  auth_approle.go  auth_base.go  auth_factory.go  auth_http_client.go  auth_interface.go  auth_jwt.go  auth_jwt_token_provider.go  auth_static.go  client.go  config.go  config_auth.go  hashivault_test.go  reference.go  signer.go  util.go
pkg/signver/kms/: kms.go
pkg/signver/kms/cliplugin/: README.md  client.go  signer.go  signer_program_test.go  signer_test.go
pkg/signver/kms/cliplugin/encoding/: options.go  options_test.go
pkg/signver/kms/cliplugin/handler/: dispatch.go  methods.go
pkg/signver/kms/hashivault/: client.go
test/data/: hello.elf  hello_with_outdated_signature.elf  hello_with_signature.elf
test/pkg/cert_utils/: cert_utils.go  fixtures.go  key_type.go  rootCA.crt  signer-chain.pem  signer.key  unknownRootCA.crt
test/pkg/vault_server/: auth_method_type.go  transit_key_type.go  vault_server.go
